# MCP-tests

./: README.md  TROUBLESHOOTING.md  claude_desktop_config.json.example  depo_response.html  depo_store.py  generate_config.ps1  nba_scores.py  pyproject.toml  setup.ps1  test_server.py  verify_config.ps1  weather.py
